[gd_scene load_steps=4 format=3 uid="uid://bpk0axlikarbm"]

[ext_resource type="Script" uid="uid://c6s5rp1ji7gb6" path="res://scenes/menus/ConfirmDialog.gd" id="1_orr5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v03a6"]
bg_color = Color(0, 0, 0, 0.298039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_345md"]
bg_color = Color(0.0156863, 0, 0.0313726, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.564706, 0.00392157, 0.968627, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ConfirmDialog" type="Panel"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v03a6")
script = ExtResource("1_orr5f")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmPanel" type="PanelContainer" parent="Center"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_345md")

[node name="MarginContainer" type="MarginContainer" parent="Center/ConfirmPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Center/ConfirmPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextLabel" type="Label" parent="Center/ConfirmPanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Center/ConfirmPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="CancelButton" type="Button" parent="Center/ConfirmPanel/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_right = NodePath("../ConfirmButton")
focus_next = NodePath("../ConfirmButton")
focus_previous = NodePath("../ConfirmButton")
theme_override_font_sizes/font_size = 40

[node name="ConfirmButton" type="Button" parent="Center/ConfirmPanel/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CancelButton")
focus_next = NodePath("../CancelButton")
focus_previous = NodePath("../CancelButton")
theme_override_font_sizes/font_size = 40

[connection signal="pressed" from="Center/ConfirmPanel/MarginContainer/VBox/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Center/ConfirmPanel/MarginContainer/VBox/Buttons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
